<resources>
    <string name="app_name">module_obd</string>
    <string name="action_settings">Settings</string>
    <string name="obd_fragment_label">obd_fragment_label</string>

    <string name="obd_handling_opinions">处理意见：</string>


    <string name="obd_hint">
    处理意见：\n
    1.让车行驶大于5公里路程后，再进行检测；\n
    2.前往附件4S店或者授权维修店检查是否有故障存在，有故障尽快维修；\n
    3.如车龄较大，可能由于ECU版本过低导致，可前往4S店升级ECU版本。\n
    </string>

    <!-- 错误内容提示信息 -->
    <string name="obd_comm_error">通讯错误：</string>
    <string name="obd_code_error">响应code为1</string>
    <string name="obd_init_error">检测vci设备号失败,请重新上电后重试</string>
    <string name="obd_comm_error_5">请将车辆熄火 10S 后请重新启动发动机</string>
    <string name="obd_comm_error_retry">扫描失败了！请您重试一下</string>

    <string name="obd_title_cart">车辆\n基本信息</string>
    <string name="obd_title_obd">OBD\n检测信息</string>
    <string name="obd_title_emission">排放相关\n数据流</string>

    <string name="obd_title_cart_2">车辆基本信息</string>
    <string name="obd_title_obd_2">OBD检测信息</string>
    <string name="obd_title_emission_2">排放相关数据流</string>

    <string name="obd_key_obdTime">检测时间</string>
    <string name="obd_key_VIN">车架号</string>
    <string name="obd_key_LampState">故障指示灯状态</string>
    <string name="obd_key_Mileage">MIL 灯点亮后行驶的里</string>
    <string name="obd_key_Current">当前故障代码数量</string>
    <string name="obd_key_ReadinessStatus">就绪状态未完成项目</string>
    <string name="obd_key_SolarTermDoorPosition">节气门绝对开度</string>
    <string name="obd_key_CalculationLoad">计算负荷值</string>
    <string name="obd_key_Velocity">车速</string>
    <string name="obd_key_EngineRev">发动机转速</string>
    <string name="obd_key_IntakeAirPressure">进气压力</string>
    <string name="obd_key_CoolantTemp">冷却液温度</string>

    <string name="obd_key_MAF">进气量</string>
    <string name="obd_key_FuelDeliveryPressure">燃油喷射压力</string>
    <string name="obd_key_EGRPosition">EGR 开度</string>
    <string name="obd_key_EGT">排气温度</string>
    <string name="obd_key_ThrottlePosition">油门开度</string>
    <string name="obd_key_EngineOilT">发动机机油温度</string>
    <string name="obd_key_NOXConcentration">氮氧传感器浓度</string>
    <string name="obd_key_EngineOutputPower">发动机输出功率</string>
    <string name="obd_key_UreaInjectionVolume">尿素喷射量</string>
    <string name="obd_key_FuelConsumption">耗油量</string>
    <string name="obd_key_DPFDifferentialPressure">颗粒捕集器压差</string>
    <string name="obd_key_ChargeAirPressure">增压压力</string>
    <string name="obd_key_ActualEngineTorque">发动机输出扭矩百分比</string>
    <string name="obd_key_EngineFrictionTorque">发动机摩擦扭矩百分比</string>
    <string name="obd_key_DTC">当前故障码号合集</string>
    <string name="obd_key_DTCMsg">当前故障信息合集</string>
    <string name="obd_key_FaultMileage">故障里程</string>
    <string name="obd_key_MILTime">MIL 灯点亮后发动机运行时间</string>
    <string name="obd_key_EGR">排气再循环系统监测</string>
    <string name="obd_key_DOC">氧化型催化转化器</string>
    <string name="obd_key_SCR">选择性催化还原器</string>
    <string name="obd_key_DPF">PM(颗粒物)监测</string>
    <string name="obd_key_POC">颗粒物催化氧化器</string>
    <string name="obd_key_CC">催化器</string>
    <string name="obd_key_CCH">加热催化转换器</string>
    <string name="obd_key_OS">氧传感</string>
    <string name="obd_key_OSH">氧传感器加热器</string>
    <string name="obd_key_ODO">车辆累计行驶里程</string>
    <string name="obd_key_OBDType">型式检验时的 OBD 要求</string>

    <string name="obd_key_CurDTC">当前故障代码 </string>
    <string name="obd_key_CurDetail">当前故障描述 </string>
    <string name="obd_key_Chinese_instructions">，中文说明</string>
    <string name="obd_key_Unsettled">未决故障代码数量</string>
    <string name="obd_key_UnsetDTC">未决故障代码 </string>
    <string name="obd_key_UnsetDetail">未决故障描述 </string>
    <string name="obd_key_Permanent">永久故障码数量</string>
    <string name="obd_key_PDTC">永久故障代码 </string>
    <string name="obd_key_PDetail">永久故障码描述 </string>

    <string name="obd_fault_not">无</string>
    <string name="obd_fault_yes">有</string>
    <string name="obd_readiness_title">就绪状态\n未完成项目</string>
    <string name="obd_fault_current_title">当前故障\n代码数量</string>
    <string name="obd_readiness_title_2">就绪状态未完成项目</string>
    <string name="obd_fault_current_title_2">当前故障代码数量</string>

    <string name="obd_ok_hint">当前车辆排放检测系统就绪，检测合格!</string>
    <string name="obd_err_hint">当前车辆排放检测系统就绪，检测不合格!</string>


    <!-- app -->
    <string name="obd_cart_scan">车辆扫描</string>
    <string name="obd_cart_scan_result">车辆扫描结果</string>
    <string name="obd_cart_scan_hint">正在扫描中，请稍后...</string>


    <!-- login -->
    <string name="obd_login_welcome_to_use">欢迎使用！</string>
    <string name="obd_login_input_vci">请连接设备读取序列号</string>
    <string name="obd_login_input_phone">请输入电话</string>
    <string name="obd_login_input_code">请输入验证码</string>
    <string name="obd_login_fetch_code">获取验证码</string>
    <string name="obd_login_text">登录</string>
    <string name="obd_login_manuals_and_protocols">您需要同意用户手册和隐私政策</string>
    <string name="obd_login_i_have_agreed">我已同意</string>
    <string name="obd_login_user_manual"> 用户手册 </string>
    <string name="obd_login_and">和</string>
    <string name="obd_login_privacy_policy"> 隐私政策 </string>
    <string name="obd_login_vci_IsNotNull">您需要先连接设备读取到Vci码</string>
    <string name="obd_login_phone_IsNotNull">请输入合法的手机号</string>
    <string name="obd_login_phone_code_IsNotNull">请输入短信验证码</string>
    <string name="obd_login_ble_location_IsOpen">扫描蓝牙需要您开启定位</string>
    <string name="obd_login_ble_not_electricity">请检查设备是否通电</string>
    <string name="obd_login_ble_not_electricity_retry">请检查设备是否通电后 进行重试</string>


    <!-- 设置 -->
    <string name="obd_set_vci">VCI码</string>
    <string name="obd_set_app_version">APP版本号</string>
    <string name="obd_set_bottom_device_version">下位机版本号</string>
    <string name="obd_set_obd_version">升级版本号</string>
    <string name="obd_set_obd_out_login_user">退出登录账号</string>

    <!-- 公用 -->
    <string name="obd_not_supported">不支持</string>
    <string name="obd_ble_connect">连接蓝牙</string>
    <string name="obd_ble_connecting">正在连接蓝牙，请稍后...</string>
    <string name="obd_select_device_to_connect">搜索到的设备列表</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="hint">提示</string>
    <string name="app_up_hint">APP升级提示</string>
    <string name="upgrade">升级</string>
    <string name="setUp">设置</string>
    <string name="obd_upgrade_hint">正在升级...</string>
    <string name="obd_upgrade_ok_hint">升级完成</string>
    <string name="outPage">退出</string>
    <string name="outApp_hint">确认退出程序吗？</string>
    <string name="is_latest_version">已是最新版本</string>
</resources>