<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:padding="@dimen/dp_30"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_welcome_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_70"
        android:text="@string/obd_login_welcome_to_use"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vic_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_36"
        android:background="@drawable/bg_frame_radius_10_stroke_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        
        <ImageView
            android:id="@+id/img_vci"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_19"
            android:src="@mipmap/icon_login_vci"
            android:layout_marginStart="@dimen/dp_12"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/bleConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obd_ble_connect"
            android:textColor="@color/obd_themesColor"
            android:layout_marginEnd="@dimen/dp_12"
            android:textSize="@dimen/sp_14"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ProgressBar
            android:id="@+id/bleProgressBar"
            android:layout_width="@dimen/dp_12"
            android:layout_height="@dimen/dp_12"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/bleConnect"
            />
        
        <EditText
            android:id="@+id/ed_vci"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:hint="@string/obd_login_input_vci"
            android:textSize="@dimen/sp_14"
            android:paddingLeft="@dimen/dp_14"
            android:enabled="false"
            app:layout_constraintLeft_toRightOf="@+id/img_vci"
            app:layout_constraintRight_toLeftOf="@+id/bleConnect"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/bg_frame_radius_10_stroke_1"
        app:layout_constraintTop_toBottomOf="@+id/vic_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/img_phone"
            android:layout_width="@dimen/dp_23"
            android:layout_height="@dimen/dp_22"
            android:src="@mipmap/icon_login_phone"
            android:layout_marginStart="@dimen/dp_12"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />



        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:hint="@string/obd_login_input_phone"
            android:inputType="number"
            android:textSize="@dimen/sp_14"
            android:paddingLeft="@dimen/dp_14"
            app:layout_constraintLeft_toRightOf="@+id/img_phone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/code_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/bg_frame_radius_10_stroke_1"
        app:layout_constraintTop_toBottomOf="@+id/phone_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/img_code"
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_25"
            android:src="@mipmap/icon_login_fetch_code"
            android:layout_marginStart="@dimen/dp_12"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/captcha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obd_login_fetch_code"
            android:textColor="@color/obd_themesColor"
            android:layout_marginEnd="@dimen/dp_12"
            android:textSize="@dimen/sp_14"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <EditText
            android:id="@+id/ed_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:hint="@string/obd_login_input_code"
            android:textSize="@dimen/sp_14"
            android:paddingLeft="@dimen/dp_14"
            android:inputType="number"
            app:layout_constraintLeft_toRightOf="@+id/img_code"
            app:layout_constraintRight_toLeftOf="@+id/captcha"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/user_manual_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@+id/code_layout"
        app:layout_constraintLeft_toLeftOf="parent">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/code_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:text="@string/obd_login_i_have_agreed"/>
        <TextView
            android:id="@+id/tv_user_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/color_theme"
            android:text="@string/obd_login_user_manual"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:text="@string/obd_login_and"/>
        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/color_theme"
            android:text="@string/obd_login_privacy_policy"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_42"
        android:theme="@style/QMUI.Compat"
        android:gravity="center"
        android:text="@string/obd_login_text"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        app:layout_constraintTop_toBottomOf="@+id/user_manual_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:qmui_backgroundColor="@color/color_theme"
        app:qmui_borderColor="@color/color_theme"
        app:qmui_isRadiusAdjustBounds="true"
        app:qmui_radius="@dimen/dp_5" />
    
</androidx.constraintlayout.widget.ConstraintLayout>