<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <View
        android:id="@+id/isolationBelt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="#F7F7F7"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/titleIcon"
            android:layout_width="@dimen/dp_3"
            android:layout_height="@dimen/dp_14"
            android:background="@color/green"
            android:layout_marginStart="@dimen/dp_18"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/sp_15"
            android:gravity="center"
            android:text="@string/obd_title_cart_2"
            android:layout_marginLeft="@dimen/dp_8"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>





    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bg_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/bg_frame_radius_10"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_14"
        android:layout_marginLeft="@dimen/dp_14"
        android:gravity="center_vertical"
        >
        <CheckBox
            android:id="@+id/notCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:checked="true"
            android:clickable="false"
            android:text="@string/obd_fault_not"
            android:textSize="@dimen/sp_14"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:background="@drawable/bg_frame_radius_10"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_14"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <CheckBox
            android:id="@+id/yesCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:text="@string/obd_fault_yes"
            android:textSize="@dimen/sp_14"
            android:clickable="false"
            app:layout_constraintTop_toTopOf="@+id/bg_layout2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/bg_layout2"
            />

        <View
            android:id="@+id/line1"
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="#D3D3D3"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_5"
            app:layout_constraintTop_toTopOf="@+id/bg_layout2"
            app:layout_constraintLeft_toRightOf="@+id/yesCheckBox"
            app:layout_constraintBottom_toBottomOf="@+id/bg_layout2"
            />


        <LinearLayout
            android:id="@+id/checkBoxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>




</androidx.appcompat.widget.LinearLayoutCompat>